# salesInsights

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml  test_sales.csv
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/middleware/: __init__.py  rate_limiter.py  security.py
backend/app/routers/: __init__.py  health.py  upload.py
backend/app/schemas/: __init__.py  upload.py
backend/app/services/: __init__.py  ai_engine.py  mailer.py  parser.py
backend/tests/: test_ai_engine.py  test_parser.py  test_upload.py
backend/tests/fixtures/: sales_q1_2026.csv
frontend/: .env.example  .eslintrc.cjs  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: EmailInput.jsx  FileUpload.jsx  ResultCard.jsx  StatusFeed.jsx
frontend/src/hooks/: useUpload.js
frontend/src/services/: api.js
